--- a/Education_Pathways/frontend/package.json
+++ b/Education_Pathways/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "html-to-react": "^1.4.7",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
